feat(service-auth): create HRMS attendance checkins
